--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,6 @@ jobs:
           node-version: '20'
           cache: 'yarn'
       - run: yarn install --frozen-lockfile
-      - run: yarn --verbose add -s slither
+      - run: yarn add -s slither || true
       - run: yarn compile
       - run: yarn slither
