--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "kikakkz <kikakkz@hotmail.com>",
   "scripts": {
     "compile": "hardhat compile",
-    "deploy": "hardhat run scripts/deploy.js",
+    "deploy": "hardhat run scripts/deploy.ts",
     "test": "hardhat test test/rocket-pool-tests.js",
     "slither": "slither --filter-paths node_modules,old --exclude conformance-to-solidity-naming-conventions ."
   },
@@ -18,17 +18,36 @@
     "@babel/runtime": "^7.20.1",
     "@chainsafe/lodestar-types": "^0.5.0",
     "@chainsafe/ssz": "^0.6.1",
+    "@nomicfoundation/hardhat-chai-matchers": "2.0.0",
+    "@nomicfoundation/hardhat-ethers": "3.0.0",
+    "@nomicfoundation/hardhat-ignition": "0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "2.0.0",
+    "@nomicfoundation/ignition-core": "0.15.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^3.3.0",
+    "@typechain/ethers-v6": "0.5.0",
+    "@typechain/hardhat": "9.0.0",
+    "@types/chai": "4",
+    "@types/mocha": "^10.0.7",
+    "@types/node": "^20.14.11",
     "axios": "^0.21.1",
+    "chai": "4",
     "dotenv": "^16.0.3",
     "ethereumjs-util": "^6.2.0",
     "glob": "^7.1.7",
-    "hardhat": "^2.12.2",
+    "hardhat": "^2.22.6",
+    "hardhat-gas-reporter": "1.0.8",
     "mocha": "^10.1.0",
     "pako": "^1.0.6",
     "query-string": "^7.0.1",
+    "solidity-coverage": "0.8.1",
+    "ts-node": "^10.9.2",
+    "typechain": "8.3.0",
+    "typescript": "^5.5.3",
     "web3": "^1.2.8"
   }
 }
