--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/chai": "4",
     "@types/mocha": "^10.0.7",
     "@types/node": "^20.14.11",
+    "@types/web3": "^1.2.2",
     "axios": "^0.21.1",
     "chai": "4",
     "dotenv": "^16.0.3",
@@ -48,6 +49,6 @@
     "ts-node": "^10.9.2",
     "typechain": "8.3.0",
     "typescript": "^5.5.3",
-    "web3": "^1.2.8"
+    "web3": "^4.11.0"
   }
 }
