--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Yet Another Implementation of secure ETH Staking",
   "repository": "https://github.com/NpoolPlatform/yar-eth-staker.git",
   "author": "kikakkz <kikakkz@hotmail.com>",
+  "license": "MIT",
   "scripts": {
     "compile": "hardhat compile",
     "deploy": "hardhat run scripts/deploy.ts",
-    "test": "hardhat test test/rocket-pool-tests.js",
+    "test": "npx hardhat test",
     "slither": "slither --filter-paths node_modules,old --exclude conformance-to-solidity-naming-conventions ."
   },
   "devDependencies": {
@@ -19,17 +20,17 @@
     "@chainsafe/lodestar-types": "^0.5.0",
     "@chainsafe/ssz": "^0.6.1",
     "@nomicfoundation/hardhat-chai-matchers": "2.0.0",
-    "@nomicfoundation/hardhat-ethers": "3.0.0",
-    "@nomicfoundation/hardhat-ignition": "0.15.0",
-    "@nomicfoundation/hardhat-ignition-ethers": "0.15.0",
-    "@nomicfoundation/hardhat-network-helpers": "1.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "2.0.0",
     "@nomicfoundation/ignition-core": "0.15.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^3.3.0",
-    "@typechain/ethers-v6": "0.5.0",
+    "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "9.0.0",
     "@types/chai": "4",
     "@types/mocha": "^10.0.7",
@@ -47,8 +48,9 @@
     "query-string": "^7.0.1",
     "solidity-coverage": "0.8.1",
     "ts-node": "^10.9.2",
-    "typechain": "8.3.0",
+    "typechain": "^8.3.0",
     "typescript": "^5.5.3",
+     "ethers": "^6.4.0",
     "web3": "^4.11.0"
   }
 }
