support deploy contract

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Yet Another Implementation of secure ETH Staking",
   "repository": "https://github.com/NpoolPlatform/yar-eth-staker.git",
   "author": "kikakkz <kikakkz@hotmail.com>",
+  "license": "MIT",
   "scripts": {
-    "compile": "hardhat compile",
-    "deploy": "hardhat run scripts/deploy.ts",
-    "test": "hardhat test test/rocket-pool-tests.js",
+    "compile": "yarn hardhat compile",
+    "deploy": "yarn hardhat deploy",
+    "deploy:mainnet": "yarn hardhat deploy --network mainnet",
+    "deploy:holesky": "yarn hardhat deploy --network holesky",
+    "test": "yarn hardhat test",
     "slither": "slither --filter-paths node_modules,old --exclude conformance-to-solidity-naming-conventions ."
   },
   "devDependencies": {
@@ -29,7 +32,7 @@
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^3.3.0",
-    "@typechain/ethers-v6": "0.5.0",
+    "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "9.0.0",
     "@types/chai": "4",
     "@types/mocha": "^10.0.7",
@@ -37,17 +40,21 @@
     "@types/web3": "^1.2.2",
     "axios": "^0.21.1",
     "chai": "4",
+    "chai-ethers": "^0.0.1",
     "dotenv": "^16.0.3",
     "ethereumjs-util": "^6.2.0",
+    "ethers": "^6.13.1",
     "glob": "^7.1.7",
     "hardhat": "^2.22.6",
+    "hardhat-deploy": "^0.12.4",
+    "hardhat-deploy-ethers": "^0.4.2",
     "hardhat-gas-reporter": "1.0.8",
     "mocha": "^10.1.0",
     "pako": "^1.0.6",
     "query-string": "^7.0.1",
     "solidity-coverage": "0.8.1",
     "ts-node": "^10.9.2",
-    "typechain": "8.3.0",
+    "typechain": "^8.3.0",
     "typescript": "^5.5.3",
     "web3": "^4.11.0"
   }
