--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "yarn hardhat deploy",
     "deploy:mainnet": "yarn hardhat deploy --network mainnet",
     "deploy:holesky": "yarn hardhat deploy --network holesky",
+    "verify": "yarn hardhat --network mainnet etherscan-verify",
     "test": "yarn hardhat test",
     "slither": "slither --filter-paths node_modules,old --exclude conformance-to-solidity-naming-conventions ."
   },
