--- a/package.json
+++ b/package.json
@@ -17,13 +17,6 @@
     "slither": "slither --filter-paths node_modules,old --exclude conformance-to-solidity-naming-conventions ."
   },
   "devDependencies": {
-    "@babel/core": "^7.24.9",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.24.8",
-    "@babel/register": "^7.18.9",
-    "@babel/runtime": "^7.20.1",
-    "@chainsafe/lodestar-types": "^0.5.0",
-    "@chainsafe/ssz": "^0.6.1",
     "@nomicfoundation/hardhat-chai-matchers": "2.0.0",
     "@nomicfoundation/hardhat-ethers": "3.0.0",
     "@nomicfoundation/hardhat-ignition": "0.15.0",
@@ -34,18 +27,14 @@
     "@nomicfoundation/ignition-core": "0.15.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/contracts": "^3.3.0",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "9.0.0",
     "@types/chai": "4",
     "@types/mocha": "^10.0.7",
     "@types/node": "^20.14.11",
-    "@types/web3": "^1.2.2",
-    "axios": "^0.21.1",
     "chai": "4",
     "chai-ethers": "^0.0.1",
     "dotenv": "^16.0.3",
-    "ethereumjs-util": "^6.2.0",
     "ethers": "^6.13.1",
     "glob": "^7.1.7",
     "hardhat": "^2.22.6",
@@ -58,7 +47,6 @@
     "solidity-coverage": "0.8.1",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.0",
-    "typescript": "^5.5.3",
-    "web3": "^4.11.0"
+    "typescript": "^5.5.3"
   }
 }
