--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,5 @@
     "skipLibCheck": true,
     "resolveJsonModule": true
   },
-  "include": [
-    "hardhat.config.ts",
-    "./scripts",
-    "./test",
-    "./deploy",
-    "./utils"
-  ]
+  "include": ["hardhat.config.ts", "./scripts", "./test", "./deploy", "./utils"]
 }
