--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy:mainnet": "yarn hardhat deploy --network mainnet",
     "deploy:holesky": "yarn hardhat deploy --network holesky",
     "watch": "yarn hardhat deploy --watch --network hardhat",
-    "export:holesky": "yarn hardhat deploy --network holesky --export ./holesky.json",
+    "export": "yarn hardhat deploy --network hardhat --export ./output/export/hardhat.json",
     "verify": "yarn hardhat --network mainnet etherscan-verify --sleep",
     "test": "yarn hardhat test",
     "slither": "slither --filter-paths node_modules,old --exclude conformance-to-solidity-naming-conventions .",
