--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "solidity-coverage": "0.8.1",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.0",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "pre-commit": "^1.2.2"
   }
 }
