Refactor contract name and proxy address

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,5 @@ ETHERSCAN_API_KEY=
 ALCHEMY_API_KEY=
 
 ## Proxy contract address
-COUNT_PROXY_ADDRESS=
+MAINNET_COUNTER_PROXY_ADDRESS=
+HOLESKY_COUNTER_PROXY_ADDRESS=
