Support upgrade with deployed proxy

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,8 @@ ETHERSCAN_API_KEY=
 ALCHEMY_API_KEY=
 
 ## Proxy contract address
+MAINNET_ADMIN_PROXY_ADDRESS=
+HOLESKY_ADMIN_PROXY_ADDRESS=
+
 MAINNET_COUNTER_PROXY_ADDRESS=
 HOLESKY_COUNTER_PROXY_ADDRESS=
