--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "2.0.0",
     "@nomicfoundation/hardhat-ethers": "3.0.0",
-    "@nomicfoundation/hardhat-ignition": "0.15.0",
-    "@nomicfoundation/hardhat-ignition-ethers": "0.15.0",
+    "@nomicfoundation/hardhat-ignition": "0.15.5",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.5",
     "@nomicfoundation/hardhat-network-helpers": "1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "2.0.0",
-    "@nomicfoundation/ignition-core": "0.15.0",
+    "@nomicfoundation/ignition-core": "0.15.5",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@typechain/ethers-v6": "^0.5.0",
@@ -51,6 +51,7 @@
     "hardhat-gas-reporter": "1.0.8",
     "mocha": "^10.1.0",
     "pako": "^1.0.6",
+    "pre-commit": "^1.2.2",
     "prettier": "^3.3.3",
     "prettier-plugin-solidity": "^1.3.1",
     "query-string": "^7.0.1",
@@ -59,7 +60,6 @@
     "solidity-coverage": "0.8.1",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.0",
-    "typescript": "^5.5.3",
-    "pre-commit": "^1.2.2"
+    "typescript": "^5.5.3"
   }
 }
