--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ ETHERSCAN_API_KEY=
 ALCHEMY_API_KEY=
 
 ## Proxy contract address
+MAINNET_PROXY_ADMIN_ADDRESS=
+HOLESKY_PROXY_ADMIN_ADDRESS=
+
 MAINNET_ADMIN_PROXY_ADDRESS=
 HOLESKY_ADMIN_PROXY_ADDRESS=
 
