--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test": "yarn hardhat test",
     "slither": "slither --filter-paths node_modules,old --exclude conformance-to-solidity-naming-conventions .",
     "lint": "yarn lint:sol && yarn prettier:check",
+    "lint:fix": "yarn lint:sol:fix && yarn prettier:write",
     "lint:sol": "solhint \"contracts/**/*.sol\" --ignore-path .solhintignore",
+    "lint:sol:fix": "solhint \"contracts/**/*.sol\" --ignore-path .solhintignore --fix",
     "prettier:check": "prettier --check \"**/*.{js,json,md,ts,yml}\"",
     "prettier:write": "prettier --write \"**/*.{js,json,md,ts,yml}\"",
     "precommit:fix": "cp ./hooks/pre-commit ./git/hooks"
@@ -57,6 +59,7 @@
     "prettier-plugin-solidity": "^1.3.1",
     "query-string": "^7.0.1",
     "solhint-community": "^4.0.0",
+    "solhint-plugin-chainlink-solidity": "npm:@chainlink/solhint-plugin-chainlink-solidity",
     "solhint-plugin-prettier": "^0.1.0",
     "solidity-coverage": "0.8.1",
     "ts-node": "^10.9.2",
