--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nomicfoundation/ignition-core": "0.15.5",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "9.0.0",
     "@types/chai": "4",
