--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ HOLESKY_PUBLIC_KEY=
 ETHERSCAN_API_KEY=
 ALCHEMY_API_KEY=
 
+REPORT_GAS=true
+SOLIDITY_COVERAGE=true
+
 ## Proxy contract address
 MAINNET_PROXY_ADMIN_ADDRESS=
 HOLESKY_PROXY_ADMIN_ADDRESS=
