Add multi sig wallet

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ SOLIDITY_COVERAGE=true
 ## Proxy contract address
 MAINNET_PROXY_ADMIN_ADDRESS=
 HOLESKY_PROXY_ADMIN_ADDRESS=
-
+yarn test
 MAINNET_ADMIN_PROXY_ADDRESS=
 HOLESKY_ADMIN_PROXY_ADDRESS=
 
