Support check multisig wallet address

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,12 @@ REPORT_GAS=true
 SOLIDITY_COVERAGE=true
 
 ## Proxy contract address
+MAINNET_MULTISIG_WALLET_CONTRACT_ADDRESS=
+HOLESKY_MULTISIG_WALLET_CONTRACT_ADDRESS=
+
 MAINNET_PROXY_ADMIN_ADDRESS=
 HOLESKY_PROXY_ADMIN_ADDRESS=
-yarn test
+
 MAINNET_ADMIN_PROXY_ADDRESS=
 HOLESKY_ADMIN_PROXY_ADDRESS=
 
