--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "deploy": "yarn hardhat deploy --network hardhat",
     "deploy:mainnet": "yarn hardhat deploy --network mainnet",
     "deploy:holesky": "yarn hardhat deploy --network holesky",
+    "deploy:localhost": "yarn hardhat deploy --network localhost",
+    "interact": "yarn hardhat --network localhost interact",
+    "interact:holesky": "yarn hardhat --network holesky interact",
     "watch": "yarn hardhat deploy --watch --network hardhat",
     "export": "yarn hardhat deploy --network hardhat --export ./output/export/hardhat.json",
     "verify": "yarn hardhat --network mainnet etherscan-verify --sleep",
