--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "deploy:mainnet": "yarn hardhat deploy --network mainnet",
     "deploy:holesky": "yarn hardhat deploy --network holesky",
     "deploy:localhost": "yarn hardhat deploy --network localhost",
-    "interact": "yarn hardhat --network localhost interact",
-    "interact:holesky": "yarn hardhat --network holesky interact",
+    "invoke": "yarn hardhat --network localhost invoke",
+    "invoke:holesky": "yarn hardhat --network holesky invoke",
     "watch": "yarn hardhat deploy --watch --network hardhat",
     "export": "yarn hardhat deploy --network hardhat --export ./output/export/hardhat.json",
     "verify": "yarn hardhat --network mainnet etherscan-verify --sleep",
