Add upgrade process

--- a/.env.public.example
+++ b/.env.public.example
@@ -1,6 +1,6 @@
 REPORT_GAS=true
 SOLIDITY_COVERAGE=true
-MULTISIG_OWNER=false
+MULTISIG_OWNER=true
 
 ## Proxy contract address
 MAINNET_PROXY_ADMIN_ADDRESS=
