--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "prettier:write": "prettier --write \"**/*.{js,json,md,ts,yml}\"",
     "precommit:fix": "cp ./hooks/pre-commit ./.git/hooks",
     "storage": "yarn hardhat check",
-    "deploy:approve:holesky": "yarn hardhat --network holesky approve"
+    "deploy:approve": "yarn hardhat --network hardhat approve",
+    "deploy:approve:mainnet": "yarn hardhat --network mainnet mainnet",
+    "deploy:approve:holesky": "yarn hardhat --network holesky approve",
+    "deploy:approve:localhost": "yarn hardhat --network localhost approve"
   },
   "pre-commit": [
     "lint",
