--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "coverage": "yarn hardhat coverage && mv coverage.json ./output",
     "install:slither": "pip install slither-analyzer",
     "slither": "slither --filter-paths node_modules,old --exclude conformance-to-solidity-naming-conventions .",
-    "lint": "yarn lint:sol && yarn prettier:check",
+    "lint": "yarn lint:sol && yarn prettier:sol && yarn prettier:check",
     "lint:fix": "yarn lint:sol:fix && yarn prettier:write",
     "lint:sol": "solhint \"contracts/**/*.sol\" --ignore-path .solhintignore",
+    "prettier:sol:fix": "npx prettier --write --plugin=prettier-plugin-solidity \"contracts/**/*.sol\"",
+    "prettier:sol": "npx prettier --list-different --plugin=prettier-plugin-solidity \"contracts/**/*.sol\"",
     "lint:sol:fix": "solhint \"contracts/**/*.sol\" --ignore-path .solhintignore --fix",
     "prettier:check": "prettier --check \"**/*.{js,json,md,ts,yml}\"",
     "prettier:write": "prettier --write \"**/*.{js,json,md,ts,yml}\"",
@@ -69,7 +71,7 @@
     "pako": "^1.0.6",
     "pre-commit": "^1.2.2",
     "prettier": "^3.3.3",
-    "prettier-plugin-solidity": "^1.3.1",
+    "prettier-plugin-solidity": "^1.4.1",
     "query-string": "^7.0.1",
     "solhint-community": "^4.0.0",
     "solhint-plugin-chainlink-solidity": "npm:@chainlink/solhint-plugin-chainlink-solidity",
